--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 .env
 node_modules/
+serviceAccountKey.json
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# SSL Certificates
+nginx/ssl/*.pem
+nginx/ssl/*.key
+nginx/ssl/*.crt
+
+# Docker volumes
+.docker/
