Use npm install in Dockerfile; update .dockerignore
Replace npm ci --only=production with npm install --omit=dev && npm cache clean --force to install production dependencies and clean npm cache during image build. Update .dockerignore to stop ignoring all markdown files (list specific docs instead) and whitelist package-lock.json so Docker builds can leverage the lockfile for faster, more consistent builds.

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,7 +5,11 @@ npm-debug.log
 .env
 .env.local
 .env.*.local
-*.md
+README.md
+SETUP.md
+DEPLOYMENT.md
+QUICKSTART.md
+SSL-SETUP.md
 .DS_Store
 .vscode
 .idea
@@ -17,3 +21,6 @@ build
 *.pem
 debug.sh
 test-api.http
+
+# Keep package-lock.json for faster builds
+!package-lock.json
